--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,44 +6,103 @@ events {
 http {
     sendfile on;
     keepalive_timeout 65;
+    client_max_body_size 100M;  # 增加上傳文件大小限制
 
-    # 將 HTTP => HTTPS
+    # HTTP 強制跳轉 HTTPS
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
+    # HTTPS 配置
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+        # SSL 憑證路徑 (需確認 Docker 掛載正確)
         ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # 將根路徑 "/"
-        # 直接反向代理到前端容器 (frontend:80)
-        # 由「前端容器」自行處理 React Fallback(/index.html)
-        location / {
-            proxy_pass http://frontend:80;
+        # SSL 協議設定
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256...';
+
+        # 靜態文件緩存設定
+        location /static/ {
+            alias /var/www/static/;
+            expires 365d;
+            access_log off;
         }
 
-        # Express
-        location /api/ {
-            rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://express:3000;
-        }
-
-        # FastAPI
-        location /fastapi/ {
-            rewrite ^/fastapi/(.*)$ /$1 break;
-            proxy_pass http://fastapi:8000;
-        }
-
-        # Crawler
+        # --------------------------
+        # 核心路由配置修正
+        # --------------------------
+        
+        # 優先處理後端 API 路由
+        # 注意順序：越具體的路由要放越前面
+        
+        # Crawler 服務
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # FastAPI 服務
+        location /fastapi/ {
+            rewrite ^/fastapi/(.*)$ /$1 break;
+            proxy_pass http://fastapi:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # Express 服務
+        location /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
+            proxy_pass http://express:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # WordPress 專用路由 (根據日誌新增)
+        location /wp-admin/ {
+            # 代理到 WordPress 容器 (需確認 Docker 服務名)
+            proxy_pass http://wordpress:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+        }
+
+        # 前端路由 (放在最後)
+        location / {
+            proxy_pass http://frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # 防止前端路由覆蓋後端路徑
+            # 排除後端路徑不讓前端處理
+            location ~ ^/(api|fastapi|crawler|wp-admin|static)/ {
+                proxy_pass http://frontend:80;
+                # 若後端返回404，則不 fallback 到前端
+                proxy_intercept_errors on;
+                error_page 404 = @backend_not_found;
+            }
+        }
+
+        # 自定義錯誤處理
+        location @backend_not_found {
+            return 404 "Resource not found";
+        }
+
+        # 其他錯誤處理
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
         }
     }
 }
