--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ events {
 http {
     sendfile on;
     keepalive_timeout 65;
-    client_max_body_size 100M;  # 增加上傳文件大小限制
+    client_max_body_size 100M;
 
     # HTTP 強制跳轉 HTTPS
     server {
@@ -15,35 +15,23 @@ http {
         return 301 https://$host$request_uri;
     }
 
-    # HTTPS 配置
+    # HTTPS 主配置
     server {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # SSL 憑證路徑 (需確認 Docker 掛載正確)
-        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        # SSL 證書 (已通過 Docker 掛載)
+        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # SSL 協議設定
+        # 現代化 SSL 配置
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
         ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256...';
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:MozSSL:10m;
 
-        # 靜態文件緩存設定
-        location /static/ {
-            alias /var/www/static/;
-            expires 365d;
-            access_log off;
-        }
-
-        # --------------------------
-        # 核心路由配置修正
-        # --------------------------
-        
-        # 優先處理後端 API 路由
-        # 注意順序：越具體的路由要放越前面
-        
-        # Crawler 服務
+        # 路由優先級從最具體到最通用
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
@@ -51,15 +39,13 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # FastAPI 服務
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
-            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Express 服務
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
@@ -67,42 +53,30 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # WordPress 專用路由 (根據日誌新增)
-        location /wp-admin/ {
-            # 代理到 WordPress 容器 (需確認 Docker 服務名)
-            proxy_pass http://wordpress:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_buffer_size 128k;
-            proxy_buffers 4 256k;
-        }
-
-        # 前端路由 (放在最後)
+        # 前端路由 (最後處理)
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             
-            # 防止前端路由覆蓋後端路徑
-            # 排除後端路徑不讓前端處理
-            location ~ ^/(api|fastapi|crawler|wp-admin|static)/ {
+            # 排除後端路徑
+            location ~* ^/(api|fastapi|crawler|static) {
                 proxy_pass http://frontend:80;
-                # 若後端返回404，則不 fallback 到前端
                 proxy_intercept_errors on;
-                error_page 404 = @backend_not_found;
+                error_page 404 = @no_frontend_fallback;
             }
         }
 
         # 自定義錯誤處理
-        location @backend_not_found {
-            return 404 "Resource not found";
+        location @no_frontend_fallback {
+            return 404 '{"error": "Endpoint not found"}';
         }
 
-        # 其他錯誤處理
         error_page 500 502 503 504 /50x.html;
         location = /50x.html {
             root /usr/share/nginx/html;
+            internal;
         }
     }
 }
