--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,11 @@ services:
       - suzoo_net
     expose:
       - "3000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   fastapi:
     build: ./fastapi
@@ -97,14 +102,10 @@ services:
     build: ./nginx
     container_name: suzoo_nginx
     depends_on:
-      frontend:
-        condition: service_started
-      express:
-        condition: service_started
-      fastapi:
-        condition: service_started
-      crawler:
-        condition: service_started
+      - frontend
+      - express
+      - fastapi
+      - crawler
     networks:
       - suzoo_net
     ports:
