--- a/express/package.json
+++ b/express/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "express-kai-v9",
+  "name": "kai-express-v1-ultimate",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "bcrypt": "^5.1.0",
-    "cloudinary": "^1.32.0",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.0.3",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
+    "express": "^4.18.2",
     "pg": "^8.9.0",
     "sequelize": "^6.29.3",
-    "uuid": "^9.0.0",
-    "web3": "^1.9.0"
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^6.7.0",
+    "axios": "^1.3.5",
+    "crypto": "1.0.1",
+    "cloudinary": "^1.32.0",
+    "nodemailer": "^6.9.1",
+    "web3": "^1.9.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
