--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,5 +10,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1"
+    "gsap": "^3.12.0"  // 新增此行
   }
 }
