--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18 as builder
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci --production  # 嚴格根據 package-lock.json 安裝，更穩定
 COPY . .
 RUN npm run build
 
