--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,8 @@
 worker_processes auto;
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
+
 http {
     sendfile on;
     keepalive_timeout 65;
@@ -13,7 +16,8 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl; 
+        http2 on; 
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
         ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
@@ -24,19 +28,25 @@ http {
         ssl_session_timeout 1d;
         ssl_session_cache shared:MozSSL:10m;
 
+        # crawler
         location /crawler/ {
             rewrite ^/crawler/(.*)$ /$1 break;
             proxy_pass http://crawler:8081;
         }
+
+        # fastapi
         location /fastapi/ {
             rewrite ^/fastapi/(.*)$ /$1 break;
             proxy_pass http://fastapi:8000;
         }
+
+        # express
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
         }
 
+        # frontend
         location / {
             proxy_pass http://frontend:80;
         }
