--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,54 +1,120 @@
 worker_processes auto;
+
 events {
     worker_connections 1024;
 }
 
 http {
-    sendfile on;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile      on;
+    tcp_nopush    on;
     keepalive_timeout 65;
     client_max_body_size 100M;
 
-    # HTTP => HTTPS
+    # ===================== Upstream 定義 =====================
+    upstream crawler_backend {
+        server crawler:8081;
+    }
+
+    upstream fastapi_backend {
+        server fastapi:8000;
+    }
+
+    upstream express_backend {
+        server express:3000;
+    }
+
+    upstream frontend_backend {
+        server frontend:80;
+    }
+
+    # ===================== HTTP => HTTPS =====================
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
+    # ===================== HTTPS 主配置 =====================
     server {
-        listen 443 ssl;
-        http2 on;
+        listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+        # SSL 證書路徑
         ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:MozSSL:10m;
+        # SSL 進階配置
+        ssl_protocols               TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers   on;
+        ssl_ciphers                 "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:"
+                                   "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
+        ssl_session_timeout         1d;
+        ssl_session_cache           shared:SSL:10m;
+        ssl_session_tickets         off;
+        ssl_stapling                on;
+        ssl_stapling_verify         on;
 
-        # crawler
+        # ===================== Crawler 服務 =====================
         location /crawler/ {
-            rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;
+            rewrite ^/crawler(/.*)$ $1 break; 
+            proxy_pass              http://crawler_backend;
+            proxy_http_version      1.1;
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+            proxy_set_header        Upgrade $http_upgrade;
+            proxy_set_header        Connection "upgrade";
+            proxy_read_timeout      300s;
         }
 
-        # fastapi
+        # ===================== FastAPI 服務 =====================
         location /fastapi/ {
-            rewrite ^/fastapi/(.*)$ /$1 break;
-            proxy_pass http://fastapi:8000;
+            rewrite ^/fastapi(/.*)$ $1 break;
+            proxy_pass              http://fastapi_backend;
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
         }
 
-        # express
+        # ===================== Express 服務 =====================
         location /api/ {
-            rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://express:3000;
+            rewrite ^/api(/.*)$ $1 break;
+            proxy_pass              http://express_backend;
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
         }
 
-        # frontend
+        # ===================== 前端靜態資源 =====================
         location / {
-            proxy_pass http://frontend:80;
+            proxy_pass              http://frontend_backend;
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+
+            # 對圖片/CSS/JS 加長期快取
+            location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+                expires 365d;
+                add_header Cache-Control "public, no-transform";
+            }
+        }
+
+        # ===================== 錯誤頁面 =====================
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+
+        # 禁止訪問隱藏文件
+        location ~ /\. {
+            deny all;
         }
     }
 }
