--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,10 +1,14 @@
-FROM node:18
+# ./express/Dockerfile
+FROM node:18-alpine
 
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
 
-COPY . ./
+# 先复制 package.json 并安装依赖
+COPY package*.json ./
+RUN npm install --production
+
+# 再复制其他文件
+COPY . .
 
 EXPOSE 3000
-CMD ["node","server.js"]
+CMD ["node", "server.js"]
