--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -99,31 +97,16 @@ services:
     expose:
       - "80"
 
+services:
   nginx:
     build:
       context: ./nginx
       dockerfile: Dockerfile
-    container_name: suzoo_nginx
-    depends_on:
-      crawler:
-        condition: service_healthy
-      frontend:
-        condition: service_started
-      express:
-        condition: service_started
-      fastapi:
-        condition: service_started
-    networks:
-      - suzoo_net
-    ports:
-      - "80:80"
-      - "443:443"
+    command: sh -c "/wait-for-it.sh crawler:8081 --timeout=30 --strict -- nginx -g 'daemon off;'"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
-    command: sh -c "/wait-for-it.sh crawler:8081 --timeout=30 --strict -- nginx -g 'daemon off;'"
-    restart: unless-stopped
-
+    
 volumes:
   db_data:
   geth_data:
