--- a/express/package.json
+++ b/express/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "gsap": "^3.12.0"
+    "gsap": "^3.12.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
