--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,16 +97,28 @@ services:
     expose:
       - "80"
 
-services:
   nginx:
     build:
       context: ./nginx
       dockerfile: Dockerfile
+    container_name: suzoo_nginx
+    # 若要在 Nginx 啟動前等待 crawler:8081，就保留下列 command
     command: sh -c "/wait-for-it.sh crawler:8081 --timeout=30 --strict -- nginx -g 'daemon off;'"
+    depends_on:
+      crawler:
+        condition: service_healthy
+    networks:
+      - suzoo_net
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/wait-for-it.sh:/wait-for-it.sh:ro   # 若您需要 wait-for-it.sh
       - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
-    
+      - /etc/letsencrypt/archive/suzookaizokuhunter.com:/etc/letsencrypt/archive/suzookaizokuhunter.com:ro
+    restart: unless-stopped
+
 volumes:
   db_data:
   geth_data:
