--- a/express/package.json
+++ b/express/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "suzookaizokuhunter-frontend-vfinal",
+  "name": "suzoo-express-final",
   "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "start": "node server.js"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "gsap": "^3.12.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.3"
   }
 }
