--- a/express/package.json
+++ b/express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "suzoo-express-final",
+  "name": "suzookaizokuhunter-express",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
@@ -8,6 +8,13 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express-rate-limit": "^7.1.3"
+    "express-rate-limit": "^7.1.3",
+    "cloudinary": "^1.32.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.29.3",
+    "pg": "^8.9.0" 
+    // 其餘若您有需要, 請保留
   }
 }
