--- a/express/package.json
+++ b/express/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "suzookaizokuhunter-express",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.1.3",
+    "bcrypt": "^5.1.1",          // 新增
+    "axios": "^1.6.2",           // 新增
     "cloudinary": "^1.32.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.29.3",
-    "pg": "^8.9.0" 
+    "pg": "^8.9.0"
   }
 }
