--- a/express/package.json
+++ b/express/package.json
@@ -4,8 +4,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-rate-limit": "^7.1.3",
-    "bcrypt": "^5.1.1",          // 新增
-    "axios": "^1.6.2",           // 新增
+    "bcrypt": "^5.1.1",          
+    "axios": "^1.6.2",           
     "cloudinary": "^1.32.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.9.1",
