--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,66 +1,37 @@
 worker_processes auto;
-
 events {
     worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    sendfile      on;
-    tcp_nopush    on;
+    sendfile on;
     keepalive_timeout 65;
     client_max_body_size 100M;
 
-    # ===================== Upstream 定義 =====================
-    upstream crawler_backend {
-        server crawler:8081;
-    }
-
-    upstream fastapi_backend {
-        server fastapi:8000;
-    }
-
-    upstream express_backend {
-        server express:3000;
-    }
-
-    upstream frontend_backend {
-        server frontend:80;
-    }
-
-    # ===================== HTTP => HTTPS =====================
+    # HTTP => HTTPS
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
         return 301 https://$host$request_uri;
     }
 
-    # ===================== HTTPS 主配置 =====================
     server {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        # SSL 證書路徑
         ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        # SSL 進階配置
-        ssl_protocols               TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers   on;
-        ssl_ciphers                 "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:"
-                                   "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
-        ssl_session_timeout         1d;
-        ssl_session_cache           shared:SSL:10m;
-        ssl_session_tickets         off;
-        ssl_stapling                on;
-        ssl_stapling_verify         on;
-
-        # ===================== Crawler 服務 =====================
-        location /crawler/ {
-            rewrite ^/crawler(/.*)$ $1 break; 
-            proxy_pass              http://crawler_backend;
+        location / {
+            proxy_pass http://frontend:80;
+        }
+        location /api/ {
+            rewrite ^/api/(.*)$ /$1 break;
+            proxy_pass http://express:3000;
+        }
+        # 其他位置( fastapi, crawler, etc. ) 可依需求
+    }
+}
             proxy_http_version      1.1;
             proxy_set_header        Host $host;
             proxy_set_header        X-Real-IP $remote_addr;
