--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,37 +96,27 @@ services:
       - suzoo_net
     expose:
       - "80"
-
+  
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    container_name: suzoo_nginx
-    depends_on:
-      crawler:
-        condition: service_healthy
-      frontend:
-        condition: service_started
-      express:
-        condition: service_started
-      fastapi:
-        condition: service_started
-    networks:
-      - suzoo_net
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      # 若您有 wait-for-it.sh 需等待 crawler, 則可掛載:
-      # - ./nginx/wait-for-it.sh:/wait-for-it.sh:ro
-      - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
-      - /etc/letsencrypt/archive/suzookaizokuhunter.com:/etc/letsencrypt/archive/suzookaizokuhunter.com:ro
-    # 如需 wait-for-it.sh, command可改:
-    # command: ["/wait-for-it.sh","crawler:8081","--timeout=30","--strict","--","nginx","-g","daemon off;"]
-    # 否則直接:
-    command: ["nginx","-g","daemon off;"]
-    restart: unless-stopped
+  build:
+    context: ./nginx
+    dockerfile: Dockerfile
+  container_name: suzoo_nginx
+  depends_on:
+    crawler:
+      condition: service_healthy
+    # 其他 depends_on
+  networks:
+    - suzoo_net
+  ports:
+    - "80:80"
+    - "443:443"
+  volumes:
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./nginx/wait-for-it.sh:/wait-for-it.sh:ro
+    - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
+    - /etc/letsencrypt/archive/suzookaizokuhunter.com:/etc/letsencrypt/archive/suzookaizokuhunter.com:ro
+  restart: unless-stopped
 
 volumes:
   db_data:
