--- a/express/package.json
+++ b/express/package.json
@@ -1,16 +1,29 @@
 {
+  "name": "soozoo-express-backend",
+  "version": "1.0.0",
+  "description": "Express backend for SuzooKaizokuHunter",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express-rate-limit": "^7.1.3",
-    "bcrypt": "^5.1.1",          
-    "axios": "^1.6.2",           
-    "cloudinary": "^1.32.0",
-    "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.9.1",
-    "multer": "^1.4.5-lts.1",
-    "sequelize": "^6.29.3",
-    "pg": "^8.9.0"
+    "express": "4.18.2",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express-rate-limit": "7.1.3",
+    "bcrypt": "5.1.1",
+    "axios": "1.6.2",
+    "cloudinary": "1.32.0",
+    "jsonwebtoken": "8.5.1",
+    "nodemailer": "6.9.1",
+    "multer": "1.4.5-lts.1",
+    "sequelize": "6.35.1",
+    "pg": "8.11.3",
+    "uuid": "9.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
