--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:15
@@ -14,7 +12,7 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL","pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -24,10 +22,10 @@ services:
     container_name: suzoo_geth
     networks:
       - suzoo_net
-    expose:
-      - "8545"
-      - "30303"
-      - "30303/udp"
+    ports:
+      - "8545:8545"
+      - "30303:30303"
+      - "30303:30303/udp"
     volumes:
       - geth_data:/root/.ethereum
 
@@ -36,10 +34,10 @@ services:
     container_name: suzoo_ipfs
     networks:
       - suzoo_net
-    expose:
-      - "4001"
-      - "5001"
-      - "8080"
+    ports:
+      - "4001:4001"
+      - "5001:5001"
+      - "8080:8080"
     volumes:
       - ipfs_data:/data/ipfs
 
@@ -51,12 +49,16 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      geth:
+        condition: service_started
+      ipfs:
+        condition: service_started
     networks:
       - suzoo_net
     expose:
       - "3000"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD","curl","-f","http://localhost:3000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -73,6 +75,12 @@ services:
       - suzoo_net
     expose:
       - "8000"
+    healthcheck:
+      test: ["CMD","curl","-f","http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
 
   crawler:
     build: ./crawler
@@ -84,10 +92,10 @@ services:
     expose:
       - "8081"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD","curl","-f","http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   frontend:
     build: ./frontend
@@ -98,6 +106,11 @@ services:
       - suzoo_net
     expose:
       - "80"
+    healthcheck:
+      test: ["CMD","curl","-f","http://localhost:80"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   nginx:
     build:
@@ -105,21 +118,20 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_nginx
     depends_on:
-      crawler:
-        condition: service_healthy
-      # 您若還需依賴 fastapi, express, frontend, etc. 也可加
+      - frontend
+      - express
+      - fastapi
+      - crawler
     networks:
       - suzoo_net
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/wait-for-it.sh:/wait-for-it.sh:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/wait-for-it.sh:/wait-for-it.sh
       - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
       - /etc/letsencrypt/archive/suzookaizokuhunter.com:/etc/letsencrypt/archive/suzookaizokuhunter.com:ro
-    # 若 Dockerfile 中已指定 CMD, 可省略 command
-    # or command: ["nginx","-g","daemon off;"]
     restart: unless-stopped
 
 volumes:
