--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,13 @@
 FROM nginx:alpine
 
-# 安裝 netcat
-RUN apk add --no-cache netcat-openbsd
+RUN apk add --no-cache netcat-openbsd bash
 
-# 複製 wait-for-it.sh
 COPY wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
-EXPOSE 80 443
+COPY nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+EXPOSE 443
+
 CMD ["/wait-for-it.sh","crawler:8081","--timeout=30","--strict","--","nginx","-g","daemon off;"]
