--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,73 +19,31 @@ http {
         listen 443 ssl http2;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-        ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        location / {
-            proxy_pass http://frontend:80;
-        }
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:MozSSL:10m;
+
         location /api/ {
             rewrite ^/api/(.*)$ /$1 break;
             proxy_pass http://express:3000;
         }
-        # 其他位置( fastapi, crawler, etc. ) 可依需求
-    }
-}
-            proxy_http_version      1.1;
-            proxy_set_header        Host $host;
-            proxy_set_header        X-Real-IP $remote_addr;
-            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header        X-Forwarded-Proto $scheme;
-            proxy_set_header        Upgrade $http_upgrade;
-            proxy_set_header        Connection "upgrade";
-            proxy_read_timeout      300s;
-        }
 
-        # ===================== FastAPI 服務 =====================
         location /fastapi/ {
-            rewrite ^/fastapi(/.*)$ $1 break;
-            proxy_pass              http://fastapi_backend;
-            proxy_set_header        Host $host;
-            proxy_set_header        X-Real-IP $remote_addr;
-            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header        X-Forwarded-Proto $scheme;
+            rewrite ^/fastapi/(.*)$ /$1 break;
+            proxy_pass http://fastapi:8000;
         }
 
-        # ===================== Express 服務 =====================
-        location /api/ {
-            rewrite ^/api(/.*)$ $1 break;
-            proxy_pass              http://express_backend;
-            proxy_set_header        Host $host;
-            proxy_set_header        X-Real-IP $remote_addr;
-            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header        X-Forwarded-Proto $scheme;
+        location /crawler/ {
+            rewrite ^/crawler/(.*)$ /$1 break;
+            proxy_pass http://crawler:8081;
         }
 
-        # ===================== 前端靜態資源 =====================
         location / {
-            proxy_pass              http://frontend_backend;
-            proxy_set_header        Host $host;
-            proxy_set_header        X-Real-IP $remote_addr;
-            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header        X-Forwarded-Proto $scheme;
-
-            # 對圖片/CSS/JS 加長期快取
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-                expires 365d;
-                add_header Cache-Control "public, no-transform";
-            }
-        }
-
-        # ===================== 錯誤頁面 =====================
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-        }
-
-        # 禁止訪問隱藏文件
-        location ~ /\. {
-            deny all;
+            proxy_pass http://frontend:80;
         }
     }
 }
