--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "suzookaizokuhunter-frontend-vfinal",
+  "name": "suzookaizokuhunter-frontend-vvs",
   "version": "1.0.0",
   "scripts": {
     "start": "react-scripts start",
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1"
-    "gsap": "^3.12.0"  // 新增此行
+    "react-scripts": "5.0.1",
+    "gsap": "^3.12.0"
   }
 }
