--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:18-alpine
 
-RUN apk add --no-cache python3 make g++
+# 安裝必要套件 (curl, bash 等)
+RUN apk add --no-cache python3 make g++ curl bash
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -8,4 +10,4 @@ RUN npm install --production
 
 COPY . .
 EXPOSE 3000
-CMD ["node","server.js"]
+CMD ["node", "server.js"]
