--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "kai-crawler-ultimate",
+  "name": "suzookaizokuhunter-crawler-vvs",
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.3.6",
+    "puppeteer": "^19.7.5",
     "express": "^4.18.2",
     "body-parser": "^1.20.1",
-    "axios": "^1.3.5",
-    "puppeteer": "^19.7.5",
     "dotenv": "^16.0.3"
   }
 }
