--- a/geth/Dockerfile
+++ b/geth/Dockerfile
@@ -1,16 +1,11 @@
-# geth/Dockerfile
-FROM ethereum/client-go:latest
+FROM ethereum/client-go:stable
 
-WORKDIR /root
+COPY genesis.json /genesis.json
 
-COPY genesis.json /root/genesis.json
+# 若有需要初始化可加:
+# RUN geth init /genesis.json
 
-RUN mkdir -p /root/.ethereum
+# 露出埠口
+EXPOSE 8545 30303 30303/udp
 
-# 注意：參數順序需先指定 --datadir，再放 genesis.json
-RUN geth init --datadir /root/.ethereum /root/genesis.json
-
-EXPOSE 30303 30303/udp 8545
-
-# 這裡改為「單行 JSON」, 避免多行被 Docker parser 錯誤判定
-CMD ["geth","--datadir","/root/.ethereum","--networkid","12345","--http","--http.addr","0.0.0.0","--http.port","8545","--http.api","eth,net,web3,personal","--allow-insecure-unlock","--dev","--unlock","0x110cb167ea55c3467cd82fdef9dd570b7d3f30b8","--password","/dev/null"]
+CMD ["geth", "--http", "--http.addr", "0.0.0.0", "--http.port", "8545", "--http.api", "eth,web3,personal,net", "--networkid", "9999", "--allow-insecure-unlock"]
