--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,8 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx","-g","daemon off;"]
+# 改用 3001 port serve
+RUN npm install -g serve
+
+EXPOSE 3001
+CMD ["serve", "-s", "build", "-l", "3001"]
