--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,11 @@
 FROM nginx:alpine
-RUN apk add --no-cache netcat-openbsd bash
+
+# 安裝 bash / curl 以防 healthcheck 或 wait-for-it.sh 需要
+RUN apk add --no-cache bash curl
 
 WORKDIR /etc/nginx
 
+# 複製 wait-for-it.sh
 COPY wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
