--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,49 +1,68 @@
-worker_processes auto;
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
-    sendfile on;
-    keepalive_timeout 65;
-    client_max_body_size 100M;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    # HTTP => HTTPS
+    sendfile        on;
+    keepalive_timeout  65;
+    server_tokens off;
+
+    # 前端 + API 反向代理範例
+    upstream frontend_service {
+        server frontend:3001;
+    }
+    upstream express_service {
+        server express:3000;
+    }
+    upstream fastapi_service {
+        server fastapi:8000;
+    }
+
     server {
         listen 80;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
+
+        # 自動轉 HTTPS
         return 301 https://$host$request_uri;
     }
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
+        # SSL 憑證路徑
         ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_session_timeout 1d;
-        ssl_session_cache shared:MozSSL:10m;
-
-        location /api/ {
-            rewrite ^/api/(.*)$ /$1 break;
-            proxy_pass http://express:3000;
-        }
-
-        location /fastapi/ {
-            rewrite ^/fastapi/(.*)$ /$1 break;
-            proxy_pass http://fastapi:8000;
-        }
-
-        location /crawler/ {
-            rewrite ^/crawler/(.*)$ /$1 break;
-            proxy_pass http://crawler:8081;
-        }
-
         location / {
-            proxy_pass http://frontend:80;
+            proxy_pass http://frontend_service;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # Express API
+        location /api/ {
+            proxy_pass http://express_service;
+            proxy_http_version 1.1;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Host $host;
+        }
+
+        # FastAPI (若需要可分路徑)
+        location /py/ {
+            proxy_pass http://fastapi_service;
         }
     }
 }
