--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 
-# 安裝必要套件 (curl, bash 等)
-RUN apk add --no-cache python3 make g++ curl bash
+# 若部署合約、web3 需安裝 python3 make g++ 等
+RUN apk add --no-cache python3 make g++ curl
 
 WORKDIR /app
 
@@ -10,4 +10,4 @@ RUN npm install --production
 
 COPY . .
 EXPOSE 3000
-CMD ["node", "server.js"]
+CMD ["node","server.js"]
